--- a/index.html
+++ b/index.html
@@ -29,9 +29,85 @@
         </div>
     </header>
 
+    <div class="contenedor clean">
+        <div class="ingreso">
+            <h2 class="titulo_ingreso">Ingresos</h2>
+            <ul>
+                <li class="elemento clean">
+                    <div class="elemento_descripcion">Sueldo</div>
+                    <div class="derecha">
+                        <div class="elemento_valor">$ 12,000.00</div>
+                        <div class="elemento_porcentaje">40%</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar--btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </li>
+                <li class="elemento clean">
+                    <div class="elemento_descripcion">Venta de Auto</div>
+                    <div class="derecha">
+                        <div class="elemento_valor">$ 15,000.00</div>
+                        <div class="elemento_porcentaje">60%</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar--btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </li>
+                <li class="elemento clean">
+                    <div class="elemento_descripcion">Regalías</div>
+                    <div class="derecha">
+                        <div class="elemento_valor">$ 2,000.00</div>
+                        <div class="elemento_porcentaje">3.4%</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar--btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="egreso">
+            <h2 class="titulo_egreso">Egresos</h2>
+            <ul>
+                <li class="elemento clean">
+                    <div class="elemento_descripcion">Despensa</div>
+                    <div class="derecha">
+                        <div class="elemento_valor">- $3,000.00</div>
+                        <div class="elemento_porcentaje">50%</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar--btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </li>
+                <li class="elemento clean">
+                    <div class="elemento_descripcion">Renta Departamento</div>
+                    <div class="derecha">
+                        <div class="elemento_valor">- $6,000.00</div>
+                        <div class="elemento_porcentaje">50%</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar--btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <script src="js/Dato.js"></script>
     <script src="js/Ingreso.js"></script>
     <script src="js/Egreso.js"></script>
     <script src="js/app.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
